@@ -2793,6 +2793,7 @@ AS $$
 $$ LANGUAGE 'sql' STABLE;
 
 -- Availability: 2.5.0
+-- Changed: 3.0.1 install from unpackaged should include postgis schema #4581
 -- Changed: 3.0.0 also upgrade postgis_raster if it exists
 CREATE OR REPLACE FUNCTION postgis_extensions_upgrade() RETURNS text
 AS $$
@@ -2837,9 +2838,18 @@ BEGIN
 							JOIN pg_catalog.pg_namespace n ON (c.relnamespace = n.oid )
 							WHERE n.nspname = 'topology' AND c.relname = 'topology') )
 
-				 -- TODO: How do we tell if PostGIS Tiger Geocoder is available  ?
+				 OR ( rec.name = 'postgis_tiger_geocoder' AND EXISTS (
+							SELECT 1 FROM pg_catalog.pg_class c
+							JOIN pg_catalog.pg_namespace n ON (c.relnamespace = n.oid )
+							WHERE n.nspname = 'tiger' AND c.relname = 'geocode_settings') )
 			THEN
-				sql = 'CREATE EXTENSION ' || rec.name || ' FROM unpackaged';
+				--force install in same schema as postgis only if postgis extension is installed
+				IF rec.name NOT IN('postgis', 'postgis_topology', 'postgis_tiger_geocoder') AND EXISTS (SELECT 1 FROM pg_catalog.pg_extension WHERE extname = 'postgis') THEN
+					sql = 'CREATE EXTENSION ' || rec.name || ' FROM unpackaged SCHEMA '
+					|| quote_ident( (SELECT ns.nspname FROM pg_catalog.pg_extension AS e INNER JOIN pg_catalog.pg_namespace AS ns ON e.extnamespace = ns.oid WHERE extname = 'postgis')) || ';';
+				ELSE
+					sql = 'CREATE EXTENSION ' || rec.name || ' FROM unpackaged;';
+				END IF;
 				RAISE NOTICE 'Packaging extension %', rec.name;
 				RAISE DEBUG '%', sql;
 				EXECUTE sql;
